Create and render Gameboard

--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic-tac-toe</title>
+    <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <div id="gameboard"></div>
-    <button id="reset"></button>
+
+    <div id="controls">
+        <input type="text" id="player1" placeholder="Player 1 Name">
+        <input type="text" id="player2" placeholder="Player 2 Name">
+        <button id="startButton">Start Game</button>
+        <button id="resetButton">Reset</button>
+    </div>
+
+    <div id="message"></div>
+
+    <div id="resultDisplay"></div>
 
     <script src="js/index.js"></script>
 </body>
