--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <div id="gameboard"></div>
+    <div id="container">
+        <div id="gameboard"></div>
+    </div>
+    
 
     <div id="controls">
         <input type="text" id="player1" placeholder="Player 1 Name">
         <input type="text" id="player2" placeholder="Player 2 Name">
         <button id="startButton">Start Game</button>
-        <button id="resetButton">Reset</button>
+        <button id="restartButton">Reset</button>
     </div>
 
     <div id="message"></div>
