Add more board styling and add player turn message

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+    <div id="header">
+        <h1>Tic Tac Toe</h1>
+    </div>
+
+    <div id="playerTurn">
+        <p>Player 1, Your Move</p>
+    </div>
+
+
     <div id="container">
         <div id="gameboard"></div>
     </div>
