--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
 
     <div id="controls">
-        <button id="restartButton">Reset</button>
+        <button id="restartButton">Restart Game</button>
     </div>
 
     <div id="message"></div>
